remove unused libraries

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ Please refer to <a href="Gittools/README.html">the documentation</a> for further
 <br/>
 
 <h3>Index of NFCP_release</h3>
-<a href="../index.html">../</a><br/><a href="./Gittools/index.html">./Gittools</a><br/><a href="./Examples/index.html">./Examples</a><br/><a href="./NFCP/index.html">./NFCP</a><br/><a href="./Documentation/index.html">./Documentation</a><br/><a href="./sync.sh">sync.sh</a><br/><a href="./README.md">README.md</a><br/><a href="./checklist.md">checklist.md</a><br/>
+<a href="../index.html">../</a><br/><a href="./Gittools/index.html">./Gittools</a><br/><a href="./Examples/index.html">./Examples</a><br/><a href="./NFCP/index.html">./NFCP</a><br/><a href="./Documentation/index.html">./Documentation</a><br/><a href="./sync.sh">sync.sh</a><br/><a href="./README.md">README.md</a><br/>
 </body>
 </html>
