--- a/Gittools/index.html
+++ b/Gittools/index.html
@@ -12,6 +12,6 @@ Please refer to <a href="./README.html">the documentation</a> for further detail
 <br/>
 
 <h3>Index of Gittools</h3>
-<a href="./maketree.py">maketree.py</a><br/><a href="./clean_git.sh">clean_git.sh</a><br/><a href="./overwrite_with_master.sh">overwrite_with_master.sh</a><br/><a href="./find_large_files.sh">find_large_files.sh</a><br/><a href="./sync.sh">sync.sh</a><br/>
+<a href="./maketree.py">maketree.py</a><br/><a href="./clean_git.sh">clean_git.sh</a><br/><a href="./overwrite_with_master.sh">overwrite_with_master.sh</a><br/><a href="./bfg.jar">bfg.jar</a><br/><a href="./find_large_files.sh">find_large_files.sh</a><br/><a href="./sync.sh">sync.sh</a><br/><a href="./fix_large_file_problem.sh">fix_large_file_problem.sh</a><br/>
 </body>
 </html>
