--- a/Documentation/_auto/util/index.html
+++ b/Documentation/_auto/util/index.html
@@ -12,6 +12,6 @@ Please refer to <a href="../../../Gittools/README.html">the documentation</a> fo
 <br/>
 
 <h3>Index of util</h3>
-<a href="../index.html">../</a><br/><a href="./functional_macros.py">functional_macros.py</a><br/><a href="./nearestPositivePoint.py">nearestPositivePoint.py</a><br/><a href="./outer.py">outer.py</a><br/><a href="./applyOptions.py">applyOptions.py</a><br/><a href="./pointsToHistogram.py">pointsToHistogram.py</a><br/><a href="./__init__.py">__init__.py</a><br/><a href="./centerfig.py">centerfig.py</a><br/><a href="./cachedinvoke.py">cachedinvoke.py</a><br/><a href="./dataHash.py">dataHash.py</a><br/>
+<a href="../index.html">../</a><br/><a href="./functional_macros.py">functional_macros.py</a><br/><a href="./nearestPositivePoint.py">nearestPositivePoint.py</a><br/><a href="./outer.py">outer.py</a><br/><a href="./applyOptions.py">applyOptions.py</a><br/><a href="./pointsToHistogram.py">pointsToHistogram.py</a><br/><a href="./__init__.py">__init__.py</a><br/><a href="./cachedinvoke.py">cachedinvoke.py</a><br/><a href="./dataHash.py">dataHash.py</a><br/>
 </body>
 </html>
