--- a/Examples/Example_1_sample_and_infer_states/index.html
+++ b/Examples/Example_1_sample_and_infer_states/index.html
@@ -12,6 +12,6 @@ Please refer to <a href="../../Gittools/README.html">the documentation</a> for f
 <br/>
 
 <h3>Index of Example_1_sample_and_infer_states</h3>
-<a href="../index.html">../</a><br/><a href="./sample_and_infer_states_normalized.m">sample_and_infer_states_normalized.m</a><br/><a href="./sample_and_infer_states.m">sample_and_infer_states.m</a><br/>
+<a href="../index.html">../</a><br/><a href="./sample_and_infer_states_normalized.m">sample_and_infer_states_normalized.m</a><br/><a href="./sample_normalized_model.m">sample_normalized_model.m</a><br/><a href="./sample_and_infer_states.m">sample_and_infer_states.m</a><br/>
 </body>
 </html>
