--- a/Examples/Example_3_infer_retinal_states/index.html
+++ b/Examples/Example_3_infer_retinal_states/index.html
@@ -12,6 +12,6 @@ Please refer to <a href="../../Gittools/README.html">the documentation</a> for f
 <br/>
 
 <h3>Index of Example_3_infer_retinal_states</h3>
-<a href="../index.html">../</a><br/><a href="./animatestate.m">animatestate.m</a><br/><a href="./test_new_renewal_model_fits_for_state_inference_20181103.m">test_new_renewal_model_fits_for_state_inference_20181103.m</a><br/><a href="./retina_state_infer_example_2.m">retina_state_infer_example_2.m</a><br/><a href="./initialize_five_state_model.m">initialize_five_state_model.m</a><br/><a href="./systemsize.m">systemsize.m</a><br/><a href="./inferrates.m">inferrates.m</a><br/><a href="./inferstate.m">inferstate.m</a><br/><a href="./loadarchive.m">loadarchive.m</a><br/><a href="./retina_state_infer_example_4.m">retina_state_infer_example_4.m</a><br/><a href="./retina_state_infer_example_3.m">retina_state_infer_example_3.m</a><br/><a href="./retina_state_infer_example_1.m">retina_state_infer_example_1.m</a><br/><a href="./retina_state_infer_example_5_3state.m">retina_state_infer_example_5_3state.m</a><br/><a href="./retina_state_infer_example_5.m">retina_state_infer_example_5.m</a><br/>
+<a href="../index.html">../</a><br/><a href="./retina_state_infer_example_1_generative_check.m">retina_state_infer_example_1_generative_check.m</a><br/><a href="./retina_state_infer_example_1_generative_check_oscillates.m">retina_state_infer_example_1_generative_check_oscillates.m</a><br/><a href="./loadarchive.m">loadarchive.m</a><br/><a href="./retina_state_infer_example_1.m">retina_state_infer_example_1.m</a><br/>
 </body>
 </html>
