--- a/NFCP/+NFCP_plotting/index.html
+++ b/NFCP/+NFCP_plotting/index.html
@@ -12,6 +12,6 @@ Please refer to <a href="../../Gittools/README.html">the documentation</a> for f
 <br/>
 
 <h3>Index of +NFCP_plotting</h3>
-<a href="../index.html">../</a><br/><a href="./update_plot.m">update_plot.m</a><br/><a href="./save_figure.m">save_figure.m</a><br/><a href="./fix_figure.m">fix_figure.m</a><br/><a href="./add_points.m">add_points.m</a><br/><a href="./fieldsToRGB.m">fieldsToRGB.m</a><br/><a href="./showField.m">showField.m</a><br/><a href="./do_plot.m">do_plot.m</a><br/>
+<a href="../index.html">../</a><br/><a href="./update_plot.m">update_plot.m</a><br/><a href="./centerfig.m">centerfig.m</a><br/><a href="./save_figure.m">save_figure.m</a><br/><a href="./fix_figure.m">fix_figure.m</a><br/><a href="./add_points.m">add_points.m</a><br/><a href="./fieldsToRGB.m">fieldsToRGB.m</a><br/><a href="./showField.m">showField.m</a><br/><a href="./do_plot.m">do_plot.m</a><br/>
 </body>
 </html>
