--- a/NFCP/util/index.html
+++ b/NFCP/util/index.html
@@ -12,6 +12,6 @@ Please refer to <a href="../../Gittools/README.html">the documentation</a> for f
 <br/>
 
 <h3>Index of util</h3>
-<a href="../index.html">../</a><br/><a href="./nearestPositivePoint.m">nearestPositivePoint.m</a><br/><a href="./centerfig.m">centerfig.m</a><br/><a href="./functional_macros.m">functional_macros.m</a><br/><a href="./applyOptions.m">applyOptions.m</a><br/><a href="./pointsToHistogram.m">pointsToHistogram.m</a><br/><a href="./outer.m">outer.m</a><br/><a href="./cachedinvoke.m">cachedinvoke.m</a><br/><a href="./dataHash.m">dataHash.m</a><br/>
+<a href="../index.html">../</a><br/><a href="./nearestPositivePoint.m">nearestPositivePoint.m</a><br/><a href="./functional_macros.m">functional_macros.m</a><br/><a href="./applyOptions.m">applyOptions.m</a><br/><a href="./pointsToHistogram.m">pointsToHistogram.m</a><br/><a href="./outer.m">outer.m</a><br/><a href="./cachedinvoke.m">cachedinvoke.m</a><br/><a href="./dataHash.m">dataHash.m</a><br/>
 </body>
 </html>
